# server/resources_api/routes.py
@@ -19,7 +19,7 @@ def initialize_routes(api):
     api.add_resource(UsersAllRes, "/api/users")
     api.add_resource(UniversityRes, "/api/universities/<string:university_id>")
     api.add_resource(
-        UniversityWithInfoRes, "/api/universities/<string:university_id>/info"
+        UniversityWithInfoRes, "/api/universities/info"
     )
     api.add_resource(UniversityAllRes, "/api/universities")
     api.add_resource(UserWithUniversityRes, "/api/users/<string:user_id>/uni")
